deployment-label.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    gcp_region: us
    owner: hybridenv
    application_division: pci
    application_name: app1
    application_role: web
    environment: prod
    au: test
    created: 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        gcp_region: us
        owner: hybridenv
        application_division: pci
        application_name: app1
        application_role: web
        environment: prod
        au: test
        created: 
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
